# rinse

./: .gitignore  .travis.yml  LICENSE  README.md  install-r.txt  pyproject.toml  rinse.py  setup.py
batch/: win_reinstall.ps1
rinse/: __init__.py  __main__.py  _main_.py  classmodule.py  core.py  rinse.py  utils.py
rinse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rinse/cookies/init/: cookiecutter.json
rinse/installr/: installr.sh
